# kursovai_5sem

./: CMakeLists.txt  Method_MelderaNida.cpp  Method_MelderaNida.h  Method_NewtonAndGauss.cpp  Method_NewtonAndGauss.h  README.md  main.cpp  plot.py
.github/workflows/: cmake-single-platform.yml
Eigen/src/Core/: Ref.h  VectorwiseOp.h
doc/: presentation.pptx  rbf.docx  report.doc  report.docx  report_new.docx
example/: CMakeLists.txt  main.cpp
include/Eigen/src/Core/: DenseBase.h  IO.h
include/Eigen/src/Core/arch/Default/: GenericPacketMathFunctions.h
include/methods_lib/: Function.h  Method_MelderaNida.h  Method_NewtonAndGauss.h  Methods.h
plot/: Neldera_And_Mida.txt  data_real_plot.py  plot.py
src/: CMakeLists.txt  Function.cpp  Method_MelderaNida.cpp  Method_NewtonAndGauss.cpp  Methods.cpp  main.cpp
src/lib/: CMakeLists.txt  Method_MelderaNida.cpp  Method_MelderaNida.h  Method_NewtonAndGauss.cpp  Method_NewtonAndGauss.h  Methods.h
src/plot/: plot.py
test/: CMakeLists.txt  test.cpp
